@@ -1,3 +1,8 @@
+2003-12-17  Daniel Steffen  <das@users.sourceforge.net>
+
+	* generic/tclBinary.c (DeleteScanNumberCache): fixed crashing bug
+	when numeric scan-value cache contains NULL value.
+
 2003-12-12  Vince Darley  <vincentdarley@users.sourceforge.net>
 
 	* generic/tclCmdAH.c: fix to normalization of non-existent user
